# src/main/openapi/rendszer-service-openapi.yml
@@ -6,18 +6,20 @@ info:
 servers:
   - url: 'https://localhost:8187'
 paths:
-   '/DMMenuapi/{userid}':
+   '/DMMenuapiuser':
      get:
-      tags:
-        - MenuController
-      operationId: getMenuByUserId
-      parameters:
-        - name: userid
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
+       tags:
+         - MenuController
+       operationId: getMenuByUserId
+       parameters:
+         - name: userid
+           in: query
+           required: true
+           schema:
+             type: string
+             format: uuid
+
+       responses:
         '200':
           description: OK
           content:
@@ -27,7 +29,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/TMenu2Dto'
 
-   '/DMMenuparameterek/{menu_id}':
+   '/DMMenuparameterekonemenu':
      get:
        tags:
          - MenuParameterekController
@@ -37,7 +39,8 @@ paths:
            in: path
            required: true
            schema:
-             type: Long
+             type: integer
+             format: int64
        responses:
          '200':
            description: OK
